[package]
name = "f_boom"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1"] }
libc = "0.2.175"
pin-project-lite = "0.2.16"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sysinfo = { version = "0.37.0", default-features = false, features = ["system"] }
tokio = { version = "1.47.1", features = ["full"] }
