[package]
name = "f_boom"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = { version = "0.37.0", default-features = false, features = ["system"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
mimalloc = { version = "0.1", default-features = false }
libc = "0.2.175"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'fat'
debug = false
overflow-checks = false

#[build]
#rustflags = ["-C", "target-cpu=native"]
