[package]
name = "f_boom"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["http2", "http3"] }
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = { version = "0.37.0", default-features = false, features = ["system"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
mimalloc = { version = "0.1", default-features = false }
#libc = "0.2.175"
clap = "4.5.47"
flume = "0.11.1"
httparse = "1.10.1"
num_cpus = "1.17.0"
tokio-util = "0.7.16"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
prost = "0.14.1"
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
tokio-stream = "0.1.17"
futures = "0.3.31"
cpu_timer = "0.1.1"

[build-dependencies]
tonic-prost-build = "0.14.2"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'fat'
debug = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native"]
